added step 1 and 2 tests